--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.password=123456
 
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+
+#spring.session.store-type=redis
+#server.servlet.session.timeout=600
+#spring.session.redis.namespace=test:spring:session
